finish localization. closes #8137

--- a/app/views/taxbills/index.html.erb
+++ b/app/views/taxbills/index.html.erb
@@ -19,6 +19,8 @@
 <% end %>
 
 <div id="show_command">
+    <%= link_to t('taxbills.total.link'), [:total, :taxbills] %>
+    |
     <%= link_to t('common.title.new'), [:new, :taxbill] %>
 </div>
 
