--- a/app/views/taxbills/show.html.erb
+++ b/app/views/taxbills/show.html.erb
@@ -10,8 +10,8 @@
   <div class="box">
     <div id="descr">
       <h3>
-        <%= BusinessClient.human_attribute_name('name') %> : <%= taxbill.taxman.business_client.name %>
-        ( <%= taxbill.taxman.business_client.registration_number %> ) - <%= taxbill.taxman.business_client.owner %>
+				<%= link_to "#{BusinessClient.human_attribute_name('name')} : #{taxbill.taxman.business_client.name} ( #{taxbill.taxman.business_client.registration_number} )", :controller => "business_clients", :action => "show", :id => taxbill.taxman.business_client %>
+				<%= " - #{taxbill.taxman.business_client.owner}" %>
       </h3>
       <table border="0" cellspacing="5" cellpadding="5">
         <tr>
