--- a/app/views/card_used_sources/_form.html.slim
+++ b/app/views/card_used_sources/_form.html.slim
@@ -22,10 +22,10 @@ h2= t("common.title.#{action_name}")
       = f.text_field :used_area
     p
       = f.label :approved_at
-      = f.text_field :approved_at
+      = f.datetime_select :approved_at, :order => [:year, :month, :day, :hour, :minute]
     p
       = f.label :approved_time
-      = f.text_field :approved_time
+      = f.datetime_select :approved_time, :order => [:year, :month, :day, :hour, :minute]
     p
       = f.label :sales_type
       = f.text_field :sales_type
