--- a/app/views/creditcards/index.html.erb
+++ b/app/views/creditcards/index.html.erb
@@ -5,6 +5,7 @@
 <table id="list-table">
   <tr>
     <th><%= Creditcard.human_attribute_name('cardno') %></th>
+    <th><%= Creditcard.human_attribute_name('short_name') %></th>
     <th><%= Creditcard.human_attribute_name('expireyear') %></th>
     <th><%= Creditcard.human_attribute_name('expiremonth') %></th>
     <th><%= Creditcard.human_attribute_name('nickname') %></th>
@@ -15,6 +16,7 @@
 <% @creditcards.each do |creditcard| %>
   <tr class="selectable" onclick="location.href='<%= creditcard_path(creditcard) %>'">
     <td><%=h creditcard.cardno %></td>
+    <td><%=h creditcard.short_name %></td>
     <td><%=h creditcard.expireyear %></td>
     <td><%=h creditcard.expiremonth %></td>
     <td><%=h creditcard.nickname %></td>
