--- a/app/views/taxbills/total.html.erb
+++ b/app/views/taxbills/total.html.erb
@@ -3,15 +3,36 @@
     <%= link_to t('common.title.back'), :taxbills %>
 </div>
 
-
 <% 3.downto(0).each do |quarter|%>
   <% between = (current_year + (3*(quarter)).month..current_year + (3*(quarter+1)).month) %>
 
-  <% purchases = @purchases.where(transacted_at: between) %>
-  <% sales = @sales.where(transacted_at: between) %>
-  <% cards = @cards.where(approved_at: between) %>
+  <% purchase_group = @purchases.where(transacted_at: between).group_by{|purchase| purchase.taxman.business_client.name } %>
+  <% sales_group = @sales.where(transacted_at: between).group_by{|sales| sales.taxman.business_client.name } %>
+  <% card_group = @cards.where(approved_at: between).group_by{|cards| cards.bank_name } %>
 
-  <% header = Array.new([purchases.size, sales.size, cards.to_a.size].max) %>
+  <%
+    purchase_list = []
+    purchase_group.each do |name, purchases|
+      purchase_list.push({name: name, tax: purchases.sum{|p| p.tax}})
+    end
+  %>
+
+  <%
+    sales_list = []
+    sales_group.each do |name, purchases|
+      sales_list.push({name: name, tax: purchases.sum{|p| p.tax}})
+    end
+  %>
+
+  <%
+    cards_list = []
+    card_group.each do |name, card|
+      cards_list.push({name: name, tax: card.sum{|p| p.tax}})
+    end
+  %>
+
+  <% header = Array.new([purchase_list.size, sales_list.size, cards_list.size].max) %>
+
   <% unless header.empty? %>
     <h3><%= t('.quarter', year: current_year.year, quarter: quarter+1)%></h3>
     <table id="list-table">
@@ -23,32 +44,29 @@
         </tr>
       </thead>
       <tbody>
-        <% header.zip(purchases.all, sales.all, cards).each do |_, purchase, sale, card| %>
+        <% header.zip(purchase_list, sales_list, cards_list).each do |_, purchase, sale, card| %>
           <tr>
             <% if purchase %>
-              <td class="selectable" onclick="location.href='<%= taxbill_path(purchase) %>'">
-                <%= purchase.taxman.business_client.name %>
+              <td>
+                <%= purchase[:name] %>
                 :
-                <%= number_to_currency purchase.tax %>
+                <%= number_to_currency purchase[:tax] %>
               </td>
             <% else %>
               <td></td>
             <% end %>
-            <% if sale %>
-              <td class="selectable" onclick="location.href='<%= taxbill_path(sale) %>'">
-                <%= sale.taxman.business_client.name %>
+            <td>
+              <% if sale %>
+                <%= sale[:name] %>
                 :
-                <%= number_to_currency sale.tax %>
-              </td>
-            <% else %>
-              <td></td>
-            <% end %>
+                <%= number_to_currency sale[:tax] %>
+              <% end %>
             </td>
             <td>
             <% if card %>
-              <%= card.bank_name %>
+              <%= card[:name] %>
               :
-              <%= number_to_currency card.tax %>
+              <%= number_to_currency card[:tax] %>
             <% end %>
             </td>
           </tr>
@@ -56,16 +74,16 @@
         <tr>
           <td>
             <%= t('common.total') %>
-            <%= number_to_currency purchases.total_tax %>
+            <%= number_to_currency purchase_list.sum{|p| p[:tax]} %>
           </td>
           <td>
             <%= t('common.total') %>
-            <%= number_to_currency sales.total_tax %>
+            <%= number_to_currency sales_list.sum{|p| p[:tax]} %>
           </td>
-          <td>
-            <%= t('common.total') %>
-            <%= number_to_currency cards.total_tax %>
-          </td>
+            <td>
+              <%= t('common.total') %>
+              <%= number_to_currency cards_list.sum{|p| p[:tax]} %>
+            </td>
         </tr>
       </tbody>
     </table>
