--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
   <title><%= title || controller.action_name %></title>
   <%= stylesheet_link_tag "application" %>
   <%= javascript_include_tag "application" %>
+  <%= yield :javascript %>
   <%= csrf_meta_tag %>
 </head>
 <body>
