--- a/app/views/users/login.html.erb
+++ b/app/views/users/login.html.erb
@@ -1,17 +1,21 @@
 <%#= stylesheet_link_tag 'main', :cache => true %>
 
 <div id="login-form">
-	<%= form_tag do %>
-		<div class="box">
-			<p>
-				<%= label_tag :name, t(".name") %>
-				<%= text_field_tag :name, params[:name] %>
-			</p>
-			<p>
-				<%= label_tag :password, t(".password") %>
-				<%= password_field_tag :password, params[:password] %>
-			</p>
-			<%= submit_tag t('.login') %>
-		</div>
-	<% end %>
+  <%= form_tag do %>
+    <div class="box">
+      <p>
+        <%= label_tag :name, t(".name") %>
+        <%= text_field_tag :name, params[:name] %>
+      </p>
+      <p>
+        <%= label_tag :password, t(".password") %>
+        <%= password_field_tag :password, params[:password] %>
+      </p>
+      <%= submit_tag t('.login') %>
+    </div>
+  <% end %>
+</div>
+
+<div class='login-link'>
+  <h4><%= link_to "or login with Google", '/auth/google' %></h4>
 </div>
