modify taxitem total calculation. closes #8143

--- a/app/views/taxbill_items/_form.html.erb
+++ b/app/views/taxbill_items/_form.html.erb
@@ -51,7 +51,7 @@
       }
 
       var calculateTotal = function(){
-        return unitprice.val() * quantity.val() - calculateTax();
+        return unitprice.val() * quantity.val() + calculateTax();
       }
 
       var applyTotal = function(){
