apply address system(with email, phonenumber and address) #8159

--- a/app/views/address_books/_form.html.slim
+++ b/app/views/address_books/_form.html.slim
@@ -30,6 +30,7 @@ h2= t("common.title.#{action_name}")
       p
         = email_field.label :email
         = email_field.email_field :email
+      br
 
     - address_book.phone_numbers.new
     h3 전화번호
@@ -40,5 +41,33 @@ h2= t("common.title.#{action_name}")
       p
         = phone_number_field.label :number
         = phone_number_field.text_field :number
+      br
+
+    - address_book.addresses.new
+    h3 주소
+    = f.fields_for :addresses do |address_field|
+      p
+        = address_field.label :target
+        = address_field.text_field :target
+      p
+        = address_field.label :country
+        = address_field.text_field :country
+      p
+        = address_field.label :province
+        = address_field.text_field :province
+      p
+        = address_field.label :city
+        = address_field.text_field :city
+      p
+        = address_field.label :other1
+        = address_field.text_field :other1
+      p
+        = address_field.label :other2
+        = address_field.text_field :other2
+      p
+        = address_field.label :postal_code
+        = address_field.text_field :postal_code
+      br
+
     p
       = f.submit
