--- a/app/views/address_books/show.html.slim
+++ b/app/views/address_books/show.html.slim
@@ -32,9 +32,31 @@ h2 #{address_book.firstname} #{address_book.lastname}
       tr
         th= "이메일(#{email.target})"
         td= email.email
-        td= link_to "제거", [address_book, email], :method => :delete, :confirm => "Are you sure?"
+        td
+          = link_to t('common.link.edit'), [:edit, address_book]
+          = " | "
+          = link_to "제거", [address_book, email], :method => :delete, :confirm => "Are you sure?"
+
     - address_book.phone_numbers.each do |phone_number|
       tr
         th= "전화번호(#{phone_number.target})"
         td= phone_number.number
-        td= link_to "제거", [address_book, phone_number], :method => :delete, :confirm => "Are you sure?"
+        td
+          = link_to t('common.link.edit'), [:edit, address_book]
+          = " | "
+          = link_to "제거", [address_book, phone_number], :method => :delete, :confirm => "Are you sure?"
+
+    - address_book.addresses.each do |address|
+      tr
+        th= "주소(#{address.target})"
+        td
+          p= address.country
+          p= address.province
+          p= address.city
+          p= address.other1
+          p= address.other2
+          p= address.postal_code
+        td
+          = link_to t('common.link.edit'), [:edit, address_book]
+          = " | "
+          = link_to "제거", [address_book, address], :method => :delete, :confirm => "Are you sure?"
