--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -22,6 +22,10 @@
     <%= f.label :password_confirmation, User.human_attribute_name("password_confirmation")  %>
     <%= f.password_field :password_confirmation, :size => 40 %>
   </p>
+  <p>
+    <%= f.label :gmail_account, User.human_attribute_name("gmail_account")  %>
+    <%= f.text_field :gmail_account, :size => 40 %>
+  </p>
 <%= fields_for :attachment, @attachment do |attachment| -%>
   <p>
     <%= attachment.label :uploaded_file, t("common.title.attachment") %>
