--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,4 +9,14 @@
   <%= link_to t('common.title.back'), users_path %>
 </div>
 <h2><%=h @this_user.name %></h2>
-
+<div class="box">
+	<div id="descr">
+	<table>
+		<tr>
+			<th>Gmail Account<th>
+			<td><%= @user.gmail_account %></td>
+		</th>
+	</table>
+	</div>
+	<div style="clear: both;"></div>
+</div>
