rename address book to contact

--- a/app/views/contacts/_form.html.slim
+++ b/app/views/contacts/_form.html.slim
@@ -1,9 +1,9 @@
 #show_command
-  = link_to t('common.title.back'), :address_books
+  = link_to t('common.title.back'), :contact
 
 h2= t("common.title.#{action_name}")
 
-= form_for address_book do |f|
+= form_for contact do |f|
   .box
     p
       = f.label :firstname
@@ -22,13 +22,13 @@ h2= t("common.title.#{action_name}")
       = f.text_field :position
 
 
-    - address_book.addresses.new
+    - contact.addresses.new
     h3 주소
     = f.fields_for :addresses do |address_field|
       = div_for(address_field.object) do
         p
           = address_field.label :target
-          = address_field.select :target, options_for_select(AddressBook::ADDRESS_TARGET, address_field.object.target)
+          = address_field.select :target, options_for_select(Contact::ADDRESS_TARGET, address_field.object.target)
         p
           = address_field.label :country
           = address_field.text_field :country
@@ -49,25 +49,25 @@ h2= t("common.title.#{action_name}")
           = address_field.text_field :postal_code
       br
 
-    - address_book.emails.new
+    - contact.emails.new
     h3 이메일
     = f.fields_for :emails do |email_field|
       = div_for(email_field.object) do
         p
           = email_field.label :target
-          = email_field.select :target, options_for_select(AddressBook::EMAIL_TARGET, email_field.object.target)
+          = email_field.select :target, options_for_select(Contact::EMAIL_TARGET, email_field.object.target)
         p
           = email_field.label :email
           = email_field.email_field :email
       br
 
-    - address_book.phone_numbers.new
+    - contact.phone_numbers.new
     h3 전화번호
     = f.fields_for :phone_numbers do |phone_number_field|
       = div_for(phone_number_field.object) do
         p
           = phone_number_field.label :target
-          = phone_number_field.select :target, options_for_select(AddressBook::PHONENUMBER_TARGET, phone_number_field.object.target)
+          = phone_number_field.select :target, options_for_select(Contact::PHONENUMBER_TARGET, phone_number_field.object.target)
         p
           = phone_number_field.label :number
           = phone_number_field.text_field :number
