--- a/app/views/contact_phone_number_tags/new.html.slim
+++ b/app/views/contact_phone_number_tags/new.html.slim
@@ -1,4 +1,4 @@
-= form_for [contact_phone_number, @contact_tag] do |f|
+= form_for @contact_tag do |f|
   p
     = f.label :name
     = f.text_field :name
