--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,6 +16,15 @@
 			<th>Gmail Account<th>
 			<td><%= @user.gmail_account %></td>
 		</th>
+		<tr>
+			<th>Email<th>
+			<td><%= @user.email %></td>
+		</th>
+		<tr>
+			<th>Boxcar Account<th>
+			<td><%= @user.boxcar_account %></td>
+		</th>
+		
 	</table>
 	</div>
 	<div style="clear: both;"></div>
