--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -20,8 +20,8 @@
     <%= f.text_field :gmail_account %>
   </p>
   <p>
-    <%= f.label :email, User.human_attribute_name('email') %>
-    <%= f.text_field :email %>
+    <%= f.label :notify_email, User.human_attribute_name('notify_email') %>
+    <%= f.text_field :notify_email %>
   </p>
   <p>
     <%= f.label :boxcar_account, User.human_attribute_name('boxcar_account') %>
