--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -27,8 +27,8 @@
     <%= f.text_field :gmail_account, :size => 40 %>
   </p>
   <p>
-    <%= f.label :email, User.human_attribute_name("email")  %>
-    <%= f.text_field :email, :size => 40 %>
+    <%= f.label :notify_email, User.human_attribute_name("notify_email")  %>
+    <%= f.text_field :notify_email, :size => 40 %>
   </p>
   <p>
     <%= f.label :boxcar_account, User.human_attribute_name("boxcar_account")  %>
