--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,7 +18,7 @@
 		</th>
 		<tr>
 			<th>Email<th>
-			<td><%= @user.email %></td>
+			<td><%= @user.notify_email %></td>
 		</th>
 		<tr>
 			<th>Boxcar Account<th>
