--- a/app/views/contacts/_form.html.slim
+++ b/app/views/contacts/_form.html.slim
@@ -27,7 +27,7 @@ h2= t("common.title.#{action_name}")
     = f.fields_for :addresses do |address_field|
       p
         = address_field.label :target
-        = address_field.select :target, options_for_select([""] + ContactAddressTag.all.map{|tag| tag.name}, address_field.object.target)
+        = address_field.select :target, options_for_select(ContactAddressTag.all.map{|tag| tag.name}, address_field.object.target)
         = link_to "새로운 대상 만들기", [:new, :contact_address_tag]
       p
         = address_field.label :country
@@ -54,7 +54,7 @@ h2= t("common.title.#{action_name}")
     = f.fields_for :emails do |email_field|
       p
         = email_field.label :target
-        = email_field.select :target, options_for_select([""] + ContactEmailTag.all.map{|tag| tag.name}, email_field.object.target)
+        = email_field.select :target, options_for_select(ContactEmailTag.all.map{|tag| tag.name}, email_field.object.target)
         = link_to "새로운 대상 만들기", [:new, :contact_email_tag]
 
       p
@@ -67,7 +67,7 @@ h2= t("common.title.#{action_name}")
     = f.fields_for :phone_numbers do |phone_number_field|
       p
         = phone_number_field.label :target
-        = phone_number_field.select :target, options_for_select([""] + ContactPhoneNumberTag.all.map{|tag| tag.name}, phone_number_field.object.target)
+        = phone_number_field.select :target, options_for_select(ContactPhoneNumberTag.all.map{|tag| tag.name}, phone_number_field.object.target)
         = link_to "새로운 대상 만들기", [:new, :contact_phone_number_tag]
       p
         = phone_number_field.label :number
