--- a/app/views/contacts/find.html.slim
+++ b/app/views/contacts/find.html.slim
@@ -1,6 +1,7 @@
 
 - content_for :search do
   = form_tag({:action => "find"}, :method => :get ) do
+    = hidden_field_tag 'target_class', params[:target_class]
     = hidden_field_tag 'target', @target.id
     = t("common.title.search")
     = " : "
@@ -25,7 +26,7 @@ h2 ..
         td= contact.department
         td= contact.position
         td
-          = link_to "선택하기", select_contact_path(contact, :target => @target), :method => :put
+          = link_to "선택하기", select_contact_path(contact, :target_class => params[:target_class], :target => @target), :method => :put
 - else
   h4= t('.empty')
 
